<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <FrameLayout
        android:id="@+id/videoContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_gravity="center"
            android:indeterminateTint="@color/white"/>
    </FrameLayout>

    <ImageView android:id="@+id/playImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_play"
        android:contentDescription="@string/play"
        app:layout_constraintTop_toBottomOf="@id/videoContainer"
        app:layout_constraintStart_toStartOf="@id/playTextView"
        app:layout_constraintEnd_toEndOf="@id/playTextView"
        style="@style/Dailymotion.ControlsButton.ImageView"/>

    <ImageView android:id="@+id/pauseImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_pause"
        android:contentDescription="@string/pause"
        app:layout_constraintTop_toTopOf="@id/playImageView"
        app:layout_constraintStart_toStartOf="@id/pauseTextView"
        app:layout_constraintEnd_toEndOf="@id/pauseTextView"
        style="@style/Dailymotion.ControlsButton.ImageView"/>

    <ImageView android:id="@+id/seekImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_seek_forward"
        android:contentDescription="@string/seek"
        app:layout_constraintTop_toTopOf="@id/playImageView"
        app:layout_constraintStart_toStartOf="@id/seekTextView"
        app:layout_constraintEnd_toEndOf="@id/seekTextView"
        style="@style/Dailymotion.ControlsButton.ImageView"/>

    <ImageView android:id="@+id/loadImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_load"
        android:contentDescription="@string/load"
        app:layout_constraintTop_toTopOf="@id/playImageView"
        app:layout_constraintStart_toStartOf="@id/loadTextView"
        app:layout_constraintEnd_toEndOf="@id/loadTextView"
        style="@style/Dailymotion.ControlsButton.ImageView"/>

    <ImageView android:id="@+id/fullscreenImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_fullscreen_enter"
        android:contentDescription="@string/fullscreen"
        app:layout_constraintTop_toTopOf="@id/playImageView"
        app:layout_constraintStart_toStartOf="@id/fullscreenTextView"
        app:layout_constraintEnd_toEndOf="@id/fullscreenTextView"
        style="@style/Dailymotion.ControlsButton.ImageView"/>

    <TextView android:id="@+id/playTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@id/playImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/pauseTextView"
        style="@style/Dailymotion.ControlsButton.Text"/>

    <TextView android:id="@+id/pauseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        app:layout_constraintTop_toTopOf="@id/playTextView"
        app:layout_constraintStart_toEndOf="@id/playTextView"
        app:layout_constraintEnd_toStartOf="@id/seekTextView"
        style="@style/Dailymotion.ControlsButton.Text"/>

    <TextView android:id="@+id/seekTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seek"
        app:layout_constraintTop_toTopOf="@id/playTextView"
        app:layout_constraintStart_toEndOf="@id/pauseTextView"
        app:layout_constraintEnd_toStartOf="@id/loadTextView"
        style="@style/Dailymotion.ControlsButton.Text"/>

    <TextView android:id="@+id/loadTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load"
        app:layout_constraintTop_toTopOf="@id/playTextView"
        app:layout_constraintStart_toEndOf="@id/seekTextView"
        app:layout_constraintEnd_toStartOf="@id/fullscreenTextView"
        style="@style/Dailymotion.ControlsButton.Text"/>

    <TextView android:id="@+id/fullscreenTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fullscreen"
        app:layout_constraintTop_toTopOf="@id/playTextView"
        app:layout_constraintStart_toEndOf="@id/loadTextView"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Dailymotion.ControlsButton.Text"/>

    <ScrollView
        android:id="@+id/skeletonScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/playTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="40dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/skeleton_cta"
                android:scaleType="fitXY"
                android:layout_marginTop="14dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/skeleton_description"
                android:scaleType="fitXY"
                android:layout_marginTop="12dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/skeleton_recommandation"
                android:scaleType="fitXY"
                android:layout_marginTop="12dp"/>

        </LinearLayout>
    </ScrollView>

    <fragment
        android:id="@+id/castMiniController"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        class="com.google.android.gms.cast.framework.media.widget.MiniControllerFragment"
        app:castShowImageThumbnail="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>