<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <FrameLayout
        android:id="@+id/videoContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBaseline_toTopOf="@id/logTabLayout">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_gravity="center"
            android:indeterminateTint="@color/white"/>
    </FrameLayout>

    <View android:id="@+id/shadowView"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/videoContainer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/logTabLayout"
        android:background="@drawable/background_tab_layout"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/logTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Dailymotion.AppTabLayout"
        app:layout_constraintTop_toBottomOf="@id/shadowView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/logConstraintLayout">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/playerEventsTabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_events_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/playerStateTabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_state_tab" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@id/logTabLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/eventsGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="playerEventsTextView, clearButton"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/stateGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="playerStateTextView, refreshButton"/>

        <TextView android:id="@+id/playerEventsTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            android:fontFamily="@font/abc_favorite_mono_regular"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/clearButton"/>

        <Button android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/clear"
            app:icon="@drawable/ic_clear"
            style="@style/Dailymotion.ActionButton"
            app:layout_constraintTop_toBottomOf="@id/playerEventsTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView android:id="@+id/playerStateTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars = "vertical"
            android:fontFamily="@font/abc_favorite_mono_regular"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/refreshButton"/>

        <Button android:id="@+id/refreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/refresh"
            app:icon="@drawable/ic_refresh"
            style="@style/Dailymotion.ActionButton"
            app:layout_constraintTop_toBottomOf="@id/playerStateTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <fragment
        android:id="@+id/castMiniController"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        class="com.google.android.gms.cast.framework.media.widget.MiniControllerFragment"
        app:castShowImageThumbnail="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>